# schema-forge

./: .gitignore  CLAUDE.md  Makefile  README.md  STATUS.md  pyproject.toml
.claude/agents/: analog-designer.md  circuit-designer.md  critic.md  filter-designer.md  librarian.md  power-designer.md  simulator.md
.claude/skills/feedback/: SKILL.md
.claude/skills/polish/: SKILL.md
.claude/skills/polish/assets/: build-report.sh  example-report.tex  schemaforge-report.cls
.claude/skills/research/: SKILL.md
.claude/skills/solve/: SKILL.md
.claude/skills/vector/: SKILL.md
backend/src/schema_forge/: __init__.py  cli.py  config.py  logging.py  netlist.py  paths.py  units.py
backend/src/schema_forge/api/: __init__.py  app.py  asgi.py  dependencies.py  exceptions.py  lifespan.py  static.py
backend/src/schema_forge/api/routes/: __init__.py  artifacts.py  events.py  health.py  state.py
backend/src/schema_forge/render/: __init__.py  __main__.py  plots.py  schematic.py
backend/src/schema_forge/sim/: __init__.py  __main__.py  assertions.py  measure.py  rawfile.py  runner.py  spec.py  verify.py
backend/src/schema_forge/state/: __init__.py  reader.py  store.py  watcher.py
backend/tests/: conftest.py  test_api.py  test_cli.py  test_measure.py  test_netlist.py  test_rawfile.py  test_render.py  test_runner.py  test_spec_assertions.py  test_state.py  test_units.py
design/: .schemaforge-template  LOG.md  PROBLEM.md  ROADMAP.md  spec.md  state.json
design/findings/: INDEX.md
docs/: deck-authoring.md
examples/fuzzface/: PROBLEM.md  README.md  spec.md
examples/overdrive/: PROBLEM.md  README.md  overdrive.cir  spec.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Bom.tsx  ErrorReports.tsx  Feedback.tsx  ProblemHeader.tsx  Research.tsx  Roadmap.tsx  SchematicView.tsx  SignalPlots.tsx  SpecPanel.tsx  StatusFeed.tsx
scripts/: init.py  seed_example.py
