[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "schema-forge"
version = "0.1.0"
description = "An LLM harness for simulation-verified electronic schematic design"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = []
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "numpy>=2.0.0",
    "schemdraw>=0.19",
    "watchfiles>=0.24.0",
]

[project.optional-dependencies]
# Heavier linear-analysis extras (symbolic transfer functions, scipy.signal).
# Not required for the core design -> simulate -> verify loop.
analysis = [
    "scipy>=1.13.0",
    "lcapy>=1.22",
]
dev = [
    "httpx>=0.28.0",
    "mypy>=1.13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
]

[project.scripts]
schema-forge = "schema_forge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/schema_forge"]

[tool.hatch.build.targets.sdist]
include = ["backend/src/schema_forge/**", "pyproject.toml", "README.md"]

[tool.uv]
# Build/install the project itself in the environment (editable by default).
package = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["backend/src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C90", "N"]
ignore = [
    "S101", # allow assert (tests + invariant checks)
    "S104", # binding 0.0.0.0 is intentional for Docker
    "S603", # subprocess call: we run ngspice on trusted, repo-local netlists
    "S607", # partial executable path: ngspice is resolved from PATH by design
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]
mypy_path = "backend/src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
# Third-party libs without type stubs.
module = ["schemdraw.*", "lcapy.*", "scipy.*"]
ignore_missing_imports = true
